--- a/test/index.html
+++ b/test/index.html
@@ -9,14 +9,32 @@
 <style>
   body {
     margin: 0;
-    padding: 2px;
+    padding: 0px;
+  }
+
+
+  #layout {
+    text-align: center;
+    height: 44px;
+    position: fixed;
+    top: 0;
+    left:0;
+    right: 0;
+    background: #fff;
+    line-height: 44px;
+    z-index: 999;
+
   }
 
 </style>
-<div id="app">
+
+
+<div id="app" style="padding-top: 100px;">
   <div id="layout"></div>
   <div class="calendar-container"></div>
 </div>
+
+
 </body>
 </html>
 
