--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
   <div id="layout"></div>
   <div class="calendar-container"></div>
 </div>
+<link rel="stylesheet" href="dist/style.css">
+<script src="dist/datepicker.js"></script>
+<script src="test/app.js"></script>
+
+
 
 
 </body>
