fix switch problem

--- a/test/index.html
+++ b/test/index.html
@@ -2,42 +2,37 @@
 <html>
 
 <head>
-    <meta name="viewport"
-          content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,shrink-to-fit=no">
     <meta charset="utf-8">
     <title>DatePicker</title>
 </head>
 
 <body>
-
-abc
-<style>
-    body {
-        margin: 0;
-        padding: 0px;
-    }
-
-    #layout {
-        text-align: center;
-        height: 44px;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        background: #fff;
-        line-height: 44px;
-        z-index: 999;
-    }
-</style>
-<div id="app" style="padding-top: 100px;">
-    <div id="layout"></div>
-    <div id=datepicker class="calendar-container"></div>
-    <div class="toolbar">
-        <input id="date-value" type="text" readonly placeholder="选择日期">
+    <style>
+        body {
+            margin: 0;
+            padding: 0px;
+        }
+        
+        #layout {
+            text-align: center;
+            height: 44px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            background: #fff;
+            line-height: 44px;
+            z-index: 999;
+        }
+    </style>
+    <div id="app" style="padding-top: 100px;">
+        <div id="layout"></div>
+        <div id=datepicker class="calendar-container"></div>
+        <div class="toolbar">
+            <input id="date-value" type="text" readonly placeholder="选择日期">
+        </div>
+        <div class="popup">
+        </div>
     </div>
-    <div class="popup">
-    </div>
-</div>
 </body>
-
-</html>
