--- a/test/index.html
+++ b/test/index.html
@@ -28,22 +28,15 @@
     }
 </style>
 <div id="app" style="padding-top: 100px;">
-    <div id="layout"></div>
-    <div class="toolbar">
-        <input id="date-value" type="text" readonly placeholder="选择日期">
+    <!--<div id="layout"></div>-->
+
+    <div class="input-group toolbar">
+        <input class="form-control" id="date-value" type="text" readonly>
+        <span class="input-group-addon"></span>
+        <div class="popup">
+            <div id=datepicker class="calendar-container"></div>
+        </div>
     </div>
-    <div class="popup">
-        <div id=datepicker class="calendar-container"></div>
-    </div>
-
-
-
-
-
-
-
-
-
 
 </div>
 </body>
