--- a/test/index.html
+++ b/test/index.html
@@ -28,15 +28,12 @@
     }
 </style>
 <div id="app" style="padding-top: 100px;">
-    <!--<div id="layout"></div>-->
-
     <div class="input-group toolbar">
+        <span class="input-group-addon " >选择日期</span>
         <input class="form-control" id="date-value" type="text" readonly>
-        <span class="input-group-addon"></span>
         <div class="popup">
             <div id=datepicker class="calendar-container"></div>
         </div>
     </div>
-
 </div>
 </body>
