--- a/test/index.html
+++ b/test/index.html
@@ -1,35 +1,15 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta name="viewport"
           content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,shrink-to-fit=no">
     <meta charset="utf-8">
     <title>DatePicker</title>
 </head>
-
 <body>
-<style>
-    body {
-        margin: 0;
-        padding: 0px;
-    }
-
-    #layout {
-        text-align: center;
-        height: 44px;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        background: #fff;
-        line-height: 44px;
-        z-index: 999;
-    }
-</style>
-<div id="app" style="padding-top: 100px;">
+<div id="app">
     <div class="input-group toolbar">
-        <span class="input-group-addon " >选择日期</span>
+        <span class="input-group-addon ">选择日期</span>
         <input class="form-control" id="date-value" type="text" readonly>
         <div class="popup">
             <div id=datepicker class="calendar-container"></div>
