--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
         <div class="input-group toolbar">
             <span class="input-group-addon ">选择日期</span>
             <input class="form-control" id="date-value" type="text" readonly>
-            <div class="popup">
+            <div class="popup" style="display:block">
                 <div id=datepicker class="calendar-container"></div>
             </div>
         </div>
