--- a/test/index.html
+++ b/test/index.html
@@ -9,13 +9,14 @@
 
 <body>
     <div id="app">
-        <div class="input-group toolbar">
+        <div class="input-group toolbar" style="display:none">
             <span class="input-group-addon ">选择日期</span>
             <input class="form-control" id="date-value" type="text" readonly>
             <div class="popup" style="display:block">
-                <div id=datepicker class="calendar-container"></div>
             </div>
         </div>
+        <div id=datepicker class="calendar-container"></div>
+
 
     </div>
 </body>
