--- a/test/index.html
+++ b/test/index.html
@@ -13,10 +13,12 @@
             <span class="input-group-addon ">选择日期</span>
             <input class="form-control" id="date-value" type="text" readonly>
             <div class="popup">
-                <div id=datepicker class="calendar-container"></div>
 
             </div>
         </div>
+
+        <div id=datepicker class="calendar-container" calendar></div>
+
 
 
     </div>
