--- a/test/test.html
+++ b/test/test.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,shrink-to-fit=no">
     <meta charset="utf-8">
     <title>DatePicker</title>
-    <link rel="stylesheet" type="text/css" href="../dist/style.css">
+    <!--<link rel="stylesheet" type="text/css" href="../dist/style.css">-->
 </head>
 
 <body>
