--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,shrink-to-fit=no">
     <meta charset="utf-8">
+    <%if(process.env.NODE_ENV !=="development") {%>
+    <link rel="stylesheet" href="./dist/typepicker.css">
+    <script src="test.min.js"></script>
+    <% } %>
     <title>DatePicker</title>
 </head>
-
 <body>
 <div id="app">
     <div class="input-group toolbar">
@@ -15,8 +18,8 @@
         <input class="form-control" id="date-value" type="text" readonly>
         <div class="popup">
             <div id=datepicker class="calendar-container" calendar></div>
-
         </div>
     </div>
 </div>
+
 </body>
