--- a/example/index.html
+++ b/example/index.html
@@ -10,16 +10,13 @@
 
 <body>
 <div id="app">
-    <div class="input-group toolbar">
-        <span class="input-group-addon ">选择日期</span>
-        <input class="form-control" id="date-value" type="text" readonly>
-        <div class="popup">
-
+    <div class="toolbar">
+        <div class="container">
+            <span class="input-group-addon ">已选日期</span>
+            <input class="form-control" id="date-value" type="text" readonly>
         </div>
-
     </div>
-
-    <div id=datepicker class="calendar-container" calendar></div>
+    <div id=datepicker class="calendar-container"></div>
 
 </div>
 </body>
