--- a/example/index.html
+++ b/example/index.html
@@ -12,7 +12,7 @@
 <div id="app">
     <div class="toolbar">
         <div class="container">
-            <span class="input-group-addon ">已选日期</span>
+            <span class="input-group-addon ">selected</span>
             <input class="form-control" id="date-value" type="text" readonly>
         </div>
     </div>
