--- a/example/index.html
+++ b/example/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta name="viewport"
-          content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,shrink-to-fit=no">
-    <meta charset="utf-8">
+    <meta
+            name="viewport"
+            content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,shrink-to-fit=no"
+    />
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="../dist/style.css">
     <title>DatePicker</title>
 </head>
 
@@ -13,10 +15,11 @@
     <div class="toolbar">
         <div class="container">
             <span class="input-group-addon ">selected</span>
-            <input class="form-control" id="date-value" type="text" readonly>
+            <input class="form-control" id="date-value" type="text" readonly/>
         </div>
     </div>
-    <div id=datepicker class="calendar-container"></div>
-
+    <div id="datepicker" class="calendar-container"></div>
 </div>
+<script src="./example.js"></script>
 </body>
+</html>
