--- a/example/index.html
+++ b/example/index.html
@@ -11,13 +11,8 @@
 
   <body>
     <div id="app">
-      <div class="toolbar">
-        <div class="container">
-          <span class="input-group-addon ">selected</span>
-          <input class="form-control" id="date-value" type="text" readonly />
-        </div>
-      </div>
       <div id="datepicker" class="calendar-container"></div>
+      <div id="date-value"></div>
     </div>
     <script src="./example.js"></script>
   </body>
