--- a/example/index.html
+++ b/example/index.html
@@ -8,12 +8,11 @@
     <meta charset="utf-8" />
     <title>DatePicker</title>
   </head>
-
   <body>
     <div id="app">
       <div id="datepicker" class="calendar-container"></div>
       <div id="date-value"></div>
     </div>
-    <script src="./example.js"></script>
+    <script src="../dist/main.js"></script>
   </body>
 </html>
