--- a/example/index.html
+++ b/example/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="container">
       <div class="display-value"><span id="value"></span></div>
-      <div id="picker"></div>
+      <div id="picker" class="calendar"></div>
     </div>
     <script src="./main.js"></script>
   </body>
